[tool.poetry]
name = "flutter-get"
version = "0.1.0"
description = "Add get and remove command for flutter"
authors = ["TrungKing <trungnd@vzota.com.vn>"]

[tool.poetry.dependencies]
python = "^3.8"
"ruamel.yaml" = "^0.16.10"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
